Error in the link to a gif image in module 5 solved

--- a/05-Importation-Transformation.Rmd
+++ b/05-Importation-Transformation.Rmd
@@ -367,7 +367,7 @@ chart(data = biometry, ~ age) +
 
 Les **addins** de RStudio vont vous permettre de réaliser facilement un découpage du jeu de données en fonction de classes d'âges (bouton `Addins -> QUESTIONR -> Numeric range dividing`).
 
-![](images/sdd1_06/addins_cut.gif)
+`r img("sdd1_05/addins_cut.gif")`
 
 Vous spécifiez le découpage voulu dans une boite de dialogue sur base de l'histogramme et lorsque vous cliquez sur le bouton `Done`, le code R qui effectue ce découpage est inséré dans l'éditeur RStudio à l'endroit du curseur. La nouvelle variable facteur `age_rec` basée sur le découpage en classes sera ensuite utile pour faire ressortir de l'information supplémentaire en contrastant les individus plus jeunes et ceux plus âgés.
 
